@@ -14,8 +14,6 @@
 
 package com.predic8.membrane.core.interceptor.acl;
 
-import java.net.InetAddress;
-
 import com.predic8.membrane.core.Router;
 
 public class Any extends AbstractClientAddress {
@@ -32,7 +30,7 @@ public class Any extends AbstractClientAddress {
 	}
 	
 	@Override
-	public boolean matches(InetAddress str) {
+	public boolean matches(String hostname, String ip) {
 		return true;
 	}
 
