@@ -30,11 +30,6 @@ public class FakeHttpHandler extends AbstractHttpHandler {
 	}
 
 	@Override
-	public InetAddress getRemoteAddress() {
-		return null;
-	}
-
-	@Override
 	public InetAddress getLocalAddress() {
 		return null;
 	}
